--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node bin/www",
     "dev": "./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "node -inspect bin/www"
   },
   "dependencies": {
     "debug": "^2.6.3",
@@ -17,6 +18,7 @@
     "koa-logger": "^2.0.1",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.1.1",
+    "koa-send": "^5.0.0",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "mysql": "^2.16.0",
