--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "mysql": "^2.16.0",
-    "pug": "^2.0.0-rc.1"
+    "pug": "^2.0.0-rc.1",
+    "webdav": "^1.6.1"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
